--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
 .start-wrapper {
     display: grid;
     grid-template-areas: "header" "content" "discount" "contacts" "map-container" "footer";
-    grid-template-rows: auto 2fr auto auto 1fr auto;
+    grid-template-rows: auto 1fr auto auto auto auto;
     grid-template-columns: 1fr;
 }
 
@@ -135,7 +135,7 @@
     text-decoration: none;
     color: dimgrey;
     text-transform: lowercase;
-    font-size: small;
+    font-size: 2vh;
 }
 
 .services-menu-link:hover {
@@ -388,21 +388,21 @@
 @media screen and (max-device-width: 567px) {
 
     .fixed-btn {
-        width: 170px;
-        height: 170px;
-        font-size: 35px;
+        width: 12vh;
+        height: 12vh;
+        font-size: 2.5vh;
         background-color: rgba(206, 169, 180, 0.5);
-        top: 9%;
-        left: 80%;
+        top: 17.5vh;
+        left: 70vw;
+        z-index: 2;
     }
 
     .header {
         display: grid;
         grid-area: header;
-        grid-template-areas: "icons barbershop-name-description" "header-menu";
-        grid-template-rows: 3fr 1fr;
-        grid-template-columns: 1fr 3fr 1fr;
-        min-height: 250px;
+        grid-template-areas: "icons" "barbershop-name-description" "header-menu";
+        grid-template-rows: auto 1fr auto;
+        grid-template-columns: 1fr;
         justify-content: space-around;
         padding-top: 3%;
         padding-left: 1%;
@@ -413,15 +413,20 @@
     }
 
     .social-link-header {
-        font-size: 60px;
+        font-size: 6vh;
+    }
+
+    .barbershop-name {
+        font-size: 7vh;
     }
 
     .barbershop-name-description {
         grid-area: barbershop-name-description;
+        padding-bottom: 2vh;
     }
 
     .barbershop-description {
-        font-size: 24px;
+        font-size: 2vh;
     }
 
     .header-menu {
@@ -445,9 +450,9 @@
         flex-direction: column;
         position: absolute;
         padding-left: 2%;
-        width: 80%;
-        height: 900px;
-        margin: 0 0 0 -60px;
+        width: 106.2vw;
+        height: 100vh;
+        margin: 0 0 0 -10vw;
         background-color: #FADADD;
         -webkit-font-smoothing: antialiased;
         transform-origin: 0% 0%;
@@ -458,7 +463,7 @@
     .header-menu-item {
         padding: 5% 0;
         transition-delay: 1s;
-        font-size: 40px;
+        font-size: 4vh;
     }
 
     .nav-btn {
@@ -500,14 +505,12 @@
         background: grey;
     }
 
-    .nav-btn:checked ~ .nav-btn-item:nth-last-child(3)
-    {
+    .nav-btn:checked ~ .nav-btn-item:nth-last-child(3) {
         opacity: 0;
         transform: rotate(0deg) scale(0.2, 0.2);
     }
 
-    .nav-btn:checked ~ .nav-btn-item:nth-last-child(2)
-    {
+    .nav-btn:checked ~ .nav-btn-item:nth-last-child(2) {
         transform: rotate(-45deg) translate(0, -1px);
     }
 
@@ -515,16 +518,16 @@
         transform: none;
     }
 
-    .barbershop-name {
-        font-size: 180px;
+    .services-menu-list {
+        margin-top: 1vh;
     }
 
     .phone-icon {
-        font-size: 50px;
+        font-size: 4.5vh;
         position: absolute;
         cursor: pointer;
-        top: 140px;
-        left: 15px;
+        top: 2vh;
+        left: 87vw;
     }
 
     .phone-number-header {
@@ -534,12 +537,12 @@
 
     .content {
         grid-area: content;
-        font-size: 40px;
+        font-size: 3vh;
     }
 
     .contacts {
         grid-area: contacts;
-        font-size: 30px;
+        font-size: 2vh;
     }
 
     .map-container {
@@ -557,7 +560,7 @@
     }
 
     .footer-header {
-        font-size: 40px;
+        font-size: 4vh;
     }
 
     .first-footer {
@@ -565,11 +568,11 @@
     }
 
     .footer-main-header {
-        font-size: 50px;
+        font-size: 5vh;
     }
 
     .social-link-footer {
-        font-size: 45px;
+        font-size: 4vh;
     }
 
     .barbershop-address {
@@ -584,15 +587,24 @@
         grid-area: services;
     }
 
+    .services-link, .about-us-link, .address-footer {
+        font-size: 2.8vh;
+    }
+
     .services-wrapper {
         display: grid;
-        grid-template-rows: auto 2fr 1fr auto;
+        grid-template-rows: auto 1fr 1fr auto;
         grid-template-columns: 1fr;
-        font-size: 40px;
+        font-size: 2vh;
+    }
+
+    .services-price-header {
+        padding-bottom: 2vh;
     }
 
     .services-content {
         padding: 3%;
+        grid-gap: 3vh;
     }
 
     .discount {
@@ -600,22 +612,28 @@
     }
 
     .discount-header {
-        font-size: 40px;
+        font-size: 3.5vh;
         font-weight: bold;
     }
 
     .discount-content {
-        font-size: 20px;
+        font-size: 2vh;
     }
 
     .discount-btn {
-        width: 60%;
-        min-height: 90px;
+        width: 60vw;
+        height: 7vh;
     }
 
     .online-registration {
-        font-size: 28px;
+        font-size: 1.8vh;
     }
+
+    .contacts-header {
+        font-size: 3.5vh;
+    }
+
+
 
     .contacts-wrapper {
         display: grid;
