--- a/css/styles.css
+++ b/css/styles.css
@@ -13,14 +13,14 @@
 
 .services-wrapper {
     display: grid;
-    grid-template-areas: "header" "services-content" "footer";
-    grid-template-rows: auto 4fr 1fr;
+    grid-template-areas: "header" "services-content" "contacts" "map-container" "footer";
+    grid-template-rows: auto auto auto auto 1fr;
 }
 
 .gallery-wrapper {
     display: grid;
     grid-template-areas: "header" "gallery-content" "contacts" "map-container" "footer";
-    grid-template-rows: auto 4fr auto auto auto;
+    grid-template-rows: auto auto auto auto 1fr;
 }
 
 .contacts-wrapper {
@@ -48,7 +48,7 @@
 .social-link-header {
     text-decoration: none;
     padding: 0 1%;
-    font-size: xx-large;
+    font-size: 6vh;
     color: dimgrey;
 }
 
@@ -60,19 +60,20 @@
 
 .barbershop-name {
     text-decoration: none;
-    font-size: 70px;
+    font-size: 10vh;
     font-family: "Brush Script Std";
     color: dimgrey;
 }
 
 .barbershop-description {
-    font-size: small;
+    font-size: 2vh;
 }
 
 .phone {
     grid-area: phone;
     text-align: end;
     padding-right: 5%;
+    font-size: 3vh;
 }
 
 .phone-icon {
@@ -100,7 +101,7 @@
     list-style: none;
     text-transform:uppercase;
     position: relative;
-    font-size: small;
+    font-size: 2vh;
     text-align: center;
     font-weight: bolder;
 }
@@ -173,7 +174,6 @@
     position: relative;
     padding: 10%;
     background: linear-gradient(to top, #FADADD, #DDC5C8);
-
 }
 
 .discount {
@@ -232,6 +232,19 @@
 
 .contacts-header {
     color: rgb(220, 62, 123);
+    font-size: 2.7vh;
+}
+
+.phone-number-contact {
+    font-size: 2.2vh;
+}
+
+.barbershop-address {
+    font-size: 2.3vh;
+}
+
+.schedule {
+    font-size: 2.4vh;
 }
 
 .map-container {
@@ -302,7 +315,7 @@
 }
 
 .footer-main-header{
-    font-size: x-large;
+    font-size: 4vh;
     font-family: "Brush Script Std";
     padding-bottom: 0.5%;
 }
@@ -315,12 +328,12 @@
 .social-link-footer {
     text-decoration: none;
     padding: 0 1%;
-    font-size: x-large;
+    font-size: 4vh;
     color: dimgrey;
 }
 
 .footer-header {
-    font-size: large;
+    font-size: 3vh;
     color: rgb(220, 62, 123);
 }
 
@@ -329,8 +342,12 @@
     color: rgb(220, 62, 123);
 }
 
-.barbershop-address {
+.barbershop-address-footer {
     color: dimgrey;
+}
+
+.address-footer {
+    font-size: 2vh;
 }
 
 .about-us {
@@ -353,6 +370,7 @@
 .services-link {
     text-decoration: none;
     color: dimgrey;
+    font-size: 2vh;
 }
 
 .services-link:hover {
@@ -371,11 +389,17 @@
 .services-price-header {
     display: flex;
     justify-content: space-between;
+    font-size: 2vh;
 }
 
 .services-list-header {
     padding: 2% 0 0.5% 0;
     font-weight: bold;
+    font-size: 2.3vh;
+}
+
+.haircut-list-paragraph {
+    font-size: 2vh;
 }
 
 .services-list-item {
@@ -387,6 +411,7 @@
 
 .price {
     font-weight: bold;
+    font-size: 2vh;
 }
 
 .nav-btn {
