--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,7 @@
 .header-menu {
     grid-area: header-menu;
     padding-top: 2%;
+    z-index: 2;
 }
 
 .header-menu-list {
@@ -170,10 +171,27 @@
 
 .content {
     grid-area: content;
-    min-height: 500px;
     position: relative;
-    padding: 10%;
-    background: linear-gradient(to top, #FADADD, #DDC5C8);
+    background-color: #DDC5C8;
+    /*text-align: center;*/
+    /*min-height: 500px;*/
+}
+
+.slogan {
+    position: absolute;
+    padding: 5% 0 0 5%;
+    font-size: 6vh;
+    color: dimgrey;
+    text-shadow: 3px 3px 3px ghostwhite;
+    max-width: 40vw;
+    line-height: 2;
+    z-index: 1;
+}
+
+.bg-img {
+    width: 100%;
+    /*opacity: 0.6;*/
+    /*height: 100vh;*/
 }
 
 .discount {
@@ -598,6 +616,10 @@
     .content {
         grid-area: content;
         font-size: 3vh;
+    }
+
+    .slogan {
+        font-size: 2vh;
     }
 
     .contacts {
