ref content-styles in media query

--- a/css/styles.css
+++ b/css/styles.css
@@ -621,10 +621,11 @@
     .content {
         grid-area: content;
         font-size: 3vh;
+        height: 70vh;
     }
 
     .slogan {
-        font-size: 2vh;
+        font-size: 3vh;
     }
 
     .contacts {
